--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,6 @@
 PORT=PORT
-MONGODB_URL=MONGODB_URL
+DATABASE_HOST=DATABASE_HOST
+DATABASE_PORT=DATABASE_PORT
+POSTGRES_DB=POSTGRES_DB
+POSTGRES_USER=POSTGRES_USER
+POSTGRES_PASSWORD=POSTGRES_PASSWORD
