--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,7 @@
-PORT=PORT
-DATABASE_HOST=DATABASE_HOST
-DATABASE_PORT=DATABASE_PORT
-POSTGRES_DB=POSTGRES_DB
-POSTGRES_USER=POSTGRES_USER
-POSTGRES_PASSWORD=POSTGRES_PASSWORD
+API_SECRET=API_SECRET
+DB_HOST=DB_HOST
+DB_DRIVER=DB_DRIVER
+DB_USER=DB_USER
+DB_PASSWORD=DB_PASSWORD
+DB_NAME=DB_NAME
+DB_PORT=DB_PORT
